Cambiado el nombre de provincias

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="text" name="city" id="id_city">
         </div>
         <div class="contact_input">
-            <label for="id_state">State</label>
+            <label for="id_state">Provinces</label>
              <select name="state" id="id_state">
                 <option value="">Elige Provincia</option>
                 <option value="Álava/Araba">Álava/Araba</option>
