--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <input type="text" name="city" id="id_city">
         </div>
         <div class="contact_input">
-            <label for="id_state">Provinces</label>
-             <select name="state" id="id_state">
+            <label for="id_province">Provinces</label>
+             <select name="province" id="id_province">
                 <option value="">Elige Provincia</option>
                 <option value="Álava/Araba">Álava/Araba</option>
                 <option value="Albacete">Albacete</option>
@@ -112,9 +112,9 @@
         <fieldset class="news radio checkbox">
         <legend>Newsletter</legend>
         <label>Select the newsletters you would like to recieve</label><br><br>
-        <input type="checkbox" name="htmlnews" id="id_htmlnews"><label for="id_htmlnews">HTML News</label><br><br>
-        <input type="checkbox" name="cssnews" id="id_cssnews"><label for="id_cssnews">CSS News</label><br><br>
-        <input type="checkbox" name="jsnews" id="id_jsnews"><label for="id_jsnews">Javascript News</label><br><br>
+        <input type="checkbox" name="newscheck" id="id_htmlnews"><label for="id_htmlnews">HTML News</label><br><br>
+        <input type="checkbox" name="newscheck" id="id_cssnews"><label for="id_cssnews">CSS News</label><br><br>
+        <input type="checkbox" name="newscheck" id="id_jsnews"><label for="id_jsnews">Javascript News</label><br><br>
 
         <label>Newsletter format</label><br><br>
         <input type="radio" name="news" id="id_html"><label for="id_html">HTML</label><br><br>
