cambios en los php

--- a/public/index.html
+++ b/public/index.html
@@ -22,20 +22,20 @@
     <div class="wrapper">
         <hr class="thick">
 
-    <form action="">
+    <form action="../modules/include/new_reg.php" method="post">
         <fieldset class="contact">
             <legend>Contact Information</legend>
         <div class="contact_input">
             <label for="id_name">Full Name</label>
-            <input type="text" name="name" id="id_name" required>
+            <input type="text" name="name" id="id_name" required placeholder="required">
         </div>
         <div class="contact_input">
             <label for="id_email">Email Address</label>
-            <input type="email" name="email" id="id_email" required>
+            <input type="email" name="email" id="id_email" required placeholder="required">
         </div>
         <div class="contact_input">
             <label for="id_phone">Phone Number</label>
-            <input type="tel" name="phone" id="id_phone">
+            <input type="tel" name="phone" id="id_phone" required placeholder="required">
         </div>
         <div class="contact_input">
             <label for="id_street">Street Address</label>
