actualizacion dia 30 php

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
             <input type="tel" name="phone" id="id_phone" required placeholder="required">
         </div>
         <div class="contact_input">
-            <label for="id_street">Street Address</label>
-            <input type="text" name="street" id="id_street">
+            <label for="id_address">Street Address</label>
+            <input type="text" name="address" id="id_address">
         </div>
         <div class="contact_input">
             <label for="id_city">City</label>
