codigo corregido y actualizado dia 5 octubre

--- a/public/index.html
+++ b/public/index.html
@@ -117,8 +117,8 @@
         <input type="checkbox" name="newscheck[]" id="id_jsnews"><label for="id_jsnews">Javascript News</label><br><br>
 
         <label>Newsletter format</label><br><br>
-        <input type="radio" name="news" id="id_html"><label for="id_html">HTML</label><br><br>
-        <input type="radio" name="news" id="id_plaintxt"><label for="id_plaintxt">Plain text</label><br><br>
+        <input type="radio" name="news" id="id_html" value="html"><label for="id_html">HTML</label><br><br>
+        <input type="radio" name="news" id="id_plaintxt" value="plaintext"><label for="id_plaintxt">Plain text</label><br><br>
         
         <label for="id_other">Other topics you'd like to hear about</label><br><br>
         <textarea name="other" id="id_other" cols="30" rows="10"></textarea>
